updated button type

--- a/LilL_Monsters_Site/index.html
+++ b/LilL_Monsters_Site/index.html
@@ -21,7 +21,7 @@
           <i class="fas fa-cube mr-2"></i>LiL Monsters</a
         >
         <button
-          type="button1"
+          type="button"
           class="navbar-toggler"
           data-toggle="collapse"
           data-target="#myTogglerNav"
